Fixed scrolling on dashboard page, and fixed apexchart on mobile.

--- a/src/main/resources/static/css/dashboard-navbar.css
+++ b/src/main/resources/static/css/dashboard-navbar.css
@@ -15,9 +15,18 @@ nav-wrapper {
     width: max-content;
 }
 
+@media (max-width: 992px) {
 
+    body {
+        background: green;
+    }
 
+    .main-panel {
 
+    }
 
+    #largeNav {
+        display: none;
+    }
 
-
+}
