--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -170,3 +170,20 @@ footer ul li {
   padding: 1rem 3rem 1rem 3rem;
   background: #fff;
 }
+
+/* Mobile view (992px max width) */
+@media (max-width: 992px) {
+
+  body {
+    background: green;
+  }
+
+  .main-panel {
+    position: initial;
+  }
+
+  #largeNav {
+    display: none;
+  }
+
+}
